# d2lapi

./: .gitignore  Final_Report.md  INSTALL.md  LICENSE  README.md  TestGUI.py  environment.yml  pyproject.toml  setup.cfg
DataFiles/: ExampleData_AnswerKey.csv  ExampleData_QuizAttemptDetails.csv  ExampleData_Survey.csv
Examples/: UsageExamples.ipynb
Figures/: Bar_Visualization.ipynb
Reports/: Conda_Installation_Instructions.md  Final_Report.md  Instruction of import functions.md  UsageRequirementsLimitations.md
src/: Widget-Based_GUI_WithLabelKeys.ipynb
src/d2lapi/: Final_Quiz.py  Final_Survey.py  Visualization_Bar.py
src/d2lapi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
