[metadata]
name = d2lapi
description = a Python library forcleaning d2l data
author = Olivia Qiu
author_email = qiuolivi@msu.edu

version = 0.0.1


[options]

packages.dir = 
        =src
packages= find:
include_package_data = True
python_requires = >=3.7
setup_requires =
    setuptools_scm

[options.packages.find]
where = src